--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -24,12 +24,28 @@
       width: 160px; }
     #header.signed-out form input[type=text], #header.signed-out form input[type=password] {
       width: 142px;
-      padding: 0px;
-      margin: 0px; }
+      padding: 2px;
+      margin: 0px;
+      border: 1px solid #1D2A5B; }
     #header.signed-out form input[type=checkbox] {
       margin-left: -1px; }
     #header.signed-out form .main-btn {
-      margin-top: 17px; }
+      background: #5B74A8;
+      padding: 1px 2px 2px 2px;
+      margin: 0;
+      border: 1px solid #5B74A8;
+      border-top-color: #8A9CC2;
+      color: white;
+      font-size: 11px;
+      font-weight: bold;
+      cursor: pointer; }
+    #header.signed-out form table tr td {
+      padding: 0px 14px 0px 0px; }
+    #header.signed-out form label {
+      position: relative;
+      top: -1px; }
+    #header.signed-out form #label_persistent {
+      color: #98a9ca; }
   #header.signed-out #nav {
     display: none; }
 
@@ -107,6 +123,30 @@ label {
     font-weight: bold;
     padding: 19px; }
 
+#signup-box table, #actual-signin-box table {
+  border: 0;
+  border-collapse: collapse;
+  border-spacing: 0; }
+#signup-box td, #actual-signin-box td {
+  padding-bottom: 5px; }
+#signup-box label, #actual-signin-box label {
+  float: right;
+  white-space: nowrap;
+  text-align: right;
+  vertical-align: middle;
+  padding: 0px 4px 0px 0px; }
+#signup-box input[type=text], #signup-box input[type=password], #actual-signin-box input[type=text], #actual-signin-box input[type=password] {
+  width: 180px !important;
+  border: 1px solid #BDC7D8;
+  margin-bottom: 0px;
+  padding: 2px; }
+#signup-box select, #actual-signin-box select {
+  width: 186px !important; }
+#signup-box input[type=submit], #actual-signin-box input[type=submit] {
+  position: relative;
+  left: 232px;
+  margin: 5px 25px 0px 0px; }
+
 #signup-box {
   float: left;
   width: 346px;
@@ -117,11 +157,6 @@ label {
     margin: 5px 0; }
   #signup-box > div {
     padding-left: 15px; }
-  #signup-box input[type=text], #signup-box input[type=password] {
-    width: 268px;
-    margin-bottom: 8px; }
-  #signup-box input[type=submit] {
-    margin: 0px; }
 
 #signin-box .login-error {
   margin: 25px 0 15px;
@@ -134,29 +169,23 @@ label {
     color: #dd3c10; }
 
 #actual-signin-box {
-  width: 295px;
-  margin: 0 auto; }
-  #actual-signin-box .group {
-    padding: 5px 0; }
-    #actual-signin-box .group label {
-      display: block;
-      padding-top: 0px; }
-  #actual-signin-box input[type=text], #actual-signin-box input[type=password] {
-    width: 250px;
-    margin-bottom: 0px; }
-  #actual-signin-box input[type=submit] {
-    margin: 10px 10px 0px 0px; }
-  #actual-signin-box .remember-me {
-    margin: 2px 0px 10px -1px; }
-  #actual-signin-box .forgot-password {
-    margin: 2px 0px 10px 0px; }
+  margin: 30px auto 10px; }
   #actual-signin-box .meta-group {
     padding-left: 0; }
   #actual-signin-box .main-btn {
     margin-right: 4px; }
+  #actual-signin-box .pretty-button {
+    float: left;
+    margin: 10px 10px 0px 0px; }
 
+#actual-signin-box.sign-in-form .remember-me {
+  margin-bottom: 6px; }
 #actual-signin-box.sign-in-form .sign-up-offer {
-  padding-top: 20px; }
+  white-space: nowrap;
+  vertical-align: middle;
+  padding-top: 14px; }
+  #actual-signin-box.sign-in-form .sign-up-offer a {
+    margin-left: 4px; }
 
 #step-arrows {
   background: #eceef4;
