--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -40,7 +40,7 @@ select {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
   font-size: 12px;
   color: #333; }
 
@@ -68,12 +68,22 @@ label {
   font-size: 12px;
   padding: 0px 3px 2px 2px; }
 
+input[type=text],
+input[type=password],
+select, textarea {
+  border: 1px solid #BDC7D8;
+  padding: 3px; }
+
+input[type=file] {
+  background: none; }
+
 textarea {
   width: 354px;
   height: 6em;
   margin-top: 0;
   margin-bottom: 10px;
-  font-size: 100%; }
+  font-size: 100%;
+  resize: none; }
 
 input[type=text], input[type=password] {
   width: 354px;
@@ -248,15 +258,28 @@ p.success {
   background: #EDEFF4;
   border: 1px solid #1D4088; }
 
+#recaptcha_image img {
+  width: 210px !important;
+  height: 40px !important;
+  background: white;
+  border: 1px solid #333;
+  margin-bottom: 10px; }
+
 #recaptcha_container {
+  position: relative;
+  left: 73px;
   border: 1px solid #b3b3b3;
-  padding: 10px 10px 2px 10px;
-  margin: 10px 0px 10px 0px; }
-  #recaptcha_container #recaptcha_image {
-    background: white;
-    border: 1px solid #333; }
-  #recaptcha_container #recaptcha_label label {
-    margin-top: 8px; }
+  padding: 10px 2px 10px 10px;
+  margin: 10px 0px 10px 0px;
+  width: 220px !important; }
+  #recaptcha_container #recaptcha_label {
+    white-space: nowrap; }
+  #recaptcha_container a {
+    position: relative;
+    top: 1px;
+    font-size: 10px; }
+  #recaptcha_container #recaptcha_response_field {
+    width: 207px !important; }
 
 #footer {
   width: 1000px;
