Updated builder help OR section

--- a/app/views/builder/_builder-help.slim
+++ b/app/views/builder/_builder-help.slim
@@ -3,6 +3,14 @@
   p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
   img.help-img.first src="/images/builder-help-drag.png"
   .spacer
-  .or OR
+  .or
+    table
+      tbody
+        tr
+          td
+            #l
+          td OR
+          td
+            #r
   p Click on a widget in the Mobile Phone Emulator to enter your information.
   img.help-img.second src="/images/builder-help-edit.png"
