--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -281,6 +281,7 @@ a img {
   left: 0;
   z-index: 999999999;
   background-color: #ff0000;
+  visibility: hidden;
   text-align: left;
   font-weight: bold;
   font-size: 12px; }
