--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -312,7 +312,7 @@ a img {
   left: 0;
   z-index:999999999;
   background-color: #ff0000;
-//  visibility: hidden;
+  visibility: hidden;
   text-align: left;
   font-weight: bold;
   font-size: $back-bar-title-font-size;
