Copy changes. Closes #386 and #387

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -76,7 +76,7 @@
       .widget-name
         | General Settings
       p.help-text
-        em Change your Business name and logo
+        em Edit General Settings
     div class="edit-area edit-settings"
       .box style="margin-bottom:10px"
         label Mobile Site URL:
