Refactored edit settings table html

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -89,34 +89,32 @@
         textarea.read-only readonly="readonly" data-orig-val=desktop_redirect_code(@company) = desktop_redirect_code @company
       
       = form_tag '/builder/settings', :multipart => true, :class => 'box' do
-        table.site-name
+        table.site-settings
           tbody
             tr
               td
                 label Site Name:
               td
                 input type="text" name="company_name" value=@company.name maxlength="40"
-        .divider
-
-        table.site-type
-          tbody
+            tr
+              td colspan="2"
+                .divider
             tr
               td
                 label Site Type:
               td
                 = select_tag :company_type, options_for_select(company_types,@company.company_type_id)
-        .divider
+            tr
+              td colspan="2"
+                .divider
+            tr
+              td.site-picture
+                label Site Picture:
+              td
+                img.logo{src=@company.logo.url(:mobile) }
 
         table
           tbody
-            tr
-              td
-                label Site Picture:
-              td
-            tr
-              td
-                img.logo{src=@company.logo.url(:mobile) }
-              td
             tr
               td
                 label Select a new picture (3MB max):
