--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -375,6 +375,13 @@
   font-size: 150%;
   word-wrap: break-word; }
 
+#builder .edit-area.category .icon-wrap, #builder .edit-area.page_tree .icon-wrap {
+  padding: 0 5px 0 0; }
+  #builder .edit-area.category .icon-wrap img, #builder .edit-area.page_tree .icon-wrap img {
+    width: 18px;
+    height: 18px; }
+#builder .edit-area.category .crumb-wrap, #builder .edit-area.page_tree .crumb-wrap {
+  padding: 1px 0 0 0; }
 #builder .edit-area.category select, #builder .edit-area.page_tree select {
   width: 331px;
   margin: 2px 0;
