--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -200,6 +200,12 @@ label {
   #actual-signin-box.sign-in-form .sign-up-offer a {
     margin-left: 4px; }
 
+#actual-signin-box.signup-error {
+  width: 330px;
+  margin: 0 auto; }
+  #actual-signin-box.signup-error .pretty-button {
+    clear: both; }
+
 #step-arrows {
   background: #eceef4;
   width: 500px;
