--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -212,6 +212,8 @@ label {
 }
 
 #actual-signin-box.sign-in-form {
+  width: 330px;
+  margin: 0 auto;
   table {
     td { padding-bottom: 2px; }
     margin: 0px auto;
