--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -111,6 +111,9 @@ label {
   background-color: #EDEFF4;
   border-bottom: 1px solid #D8DFEA;
   padding: 5px 40px 5px 40px; }
+  .signup-bar .content {
+    width: 1010px;
+    margin: 0 auto; }
   .signup-bar a {
     color: white !important;
     text-decoration: none; }
