--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -408,7 +408,9 @@ div.wysiwyg ul.toolbar {
         color: #7e7e7e;
         text-align: center; }
       .t1 {
-        display: none; }
+        display: none;
+        clear: left;
+      }
       .closed {
         display: none;
         padding-top: 4px;
