Moved helpText away from widget icon. Refactored helpText to be more maintainable.

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -20,4 +20,6 @@ _.templateSettings.interpolate = /\{\{([^\{].*?)\}\}/g;
 
 bdata = <%= raw widget_docs %>;
 
+bhelp = <%=raw help_texts %>;
+
 </script>
