--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -43,5 +43,6 @@ html lang="en-US"
     
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/jquery-1.6.2.min'
+    = javascript_include_tag 'support/jquery.tooltip.v.1.1'
     = javascript_include_tag 'notice'
     = yield :js
