Don't show help text on inner pages of category widgets

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -30,7 +30,9 @@
         '
         a.rename-link href="#" Rename
     div class="edit-area {{ wtype }}"
+      | <% if (!_maybe.hideHelpText) { %>
       .explanation {{ helpText }}
+      | <% } %>
       | {{ editAreaContent }}
 
     .action-bar
