--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -20,7 +20,7 @@ html lang="en-US"
     #global-container
       #header.signed-in
         .content
-          #logo YoMobi
+          a#logo href=builder_main_path YoMobi
           = render :partial => 'shared/nav'
           .clearfix
       #page-container
