Hide rename link when widget is not renameable. Added dot between help and rename links.

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -27,7 +27,7 @@
           img src="/images/ui/help-bubble.png"
       p.help-text
         a.help-link href="#" Help
-        '
+        span.dot &nbsp;&middot;&nbsp;
         a.rename-link href="#" Rename
     div class="edit-area {{ wtype }}"
       | <% if (!_maybe.hideHelpText) { %>
