--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -237,11 +237,10 @@ div.wysiwyg ul.toolbar {
       font-size: 0.6em; }
     #builder .widget-editor .widget-name .help-bubble {
       float: right; }
-    #builder .widget-editor .widget-name.editable:hover {
-      background: #d8dfea;
-      cursor: pointer; }
-      #builder .widget-editor .widget-name.editable:hover .change-label {
-        display: inline; }
+  #builder .widget-editor p.help-text .dot, #builder .widget-editor p.help-text .rename-link {
+    display: none; }
+  #builder .widget-editor p.help-text.editable .dot, #builder .widget-editor p.help-text.editable .rename-link {
+    display: inline; }
   #builder .widget-editor .widget-name-edit {
     display: none;
     position: relative;
