Refactored icon picking to allow for multiple, renamable widgets with custom icons. Added video widget. Closes #189

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -449,7 +449,7 @@
   / =====================
   / = Widget Edit Pages =
   / =====================
-  script.full-website-edit-area.news-edit-area.photo-bucket-edit-area.blog-edit-area.reviews-edit-area(type="text/template")
+  script.video-edit-area.full-website-edit-area.news-edit-area.photo-bucket-edit-area.blog-edit-area.reviews-edit-area(type="text/template")
     label Your {{ subHelpText }} URL*:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
