Fixed a bug that caused mobile site widgets not to load

--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -16,4 +16,6 @@ window.widgetEditors = {};
 
 _.templateSettings.interpolate = /\{\{([^\{].*?)\}\}/g;
 
+bdata = <%= raw widget_docs %>;
+
 </script>
