--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -91,6 +91,7 @@ a img {
   padding-left: 0 1px 0 8px;
   background: $color-topbar;
   color: white;
+  table { height: 36px; }
   td {
     vertical-align: center; }
   .logo {
