Fixed weird ie / sharethis related bug. Closes #156

--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -11,7 +11,7 @@
 h1 = @company.name
 #builder-container
   #builder
-    .panel
+    .follower-panel
       h2 Email Your Followers
       - if notice
         p.success = notice
