--- a/app/views/widgets/informed/text_panel.slim
+++ b/app/views/widgets/informed/text_panel.slim
@@ -13,7 +13,7 @@
 h1 = @company.name
 #builder-container
   #builder
-    .panel
+    .follower-panel
       h2 Text Message your Followers
       - if notice
         p.success = notice
