--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -290,7 +290,7 @@ div.wysiwyg ul.toolbar {
   }
 }
 
-#builder .panel {
+#builder .follower-panel {
   padding: 0 0 10px 10px; }
 
 #emulator-wrapper {
